--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1306,6 +1306,9 @@ body.hasHover .tooltip {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
+
+  font-size: 75%;
+  font-style: italic;
 }
 #project__header .projectclose {
   width: 25px;
@@ -1393,6 +1396,9 @@ body.hasHover .tooltip {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
+
+  font-size: 90%;
+
   /* padding-right: 1rem; */
   /* padding-left: 0.2rem; */
 
@@ -1427,6 +1433,18 @@ body.hasHover .tooltip {
   cursor: pointer;
 }
 
+#project__header
+  .projecttoggle
+  .projecttoggle__wrapper
+  .projecttoggle__item.projecttoggle--overview {
+  margin-left: 0.25rem;
+}
+
+#menu
+  .menu__wrapper
+  .menu__item.projectlist
+  .projectlist__item.active
+  .item--projectname,
 #project__header
   .projecttoggle
   .projecttoggle__wrapper
@@ -1525,6 +1543,16 @@ body.hasHover .tooltip {
 #project .project__layer .project__layer__body .overview__thumbnail__wrapper {
   padding-top: calc(2.525rem + 15.3vw);
 }
+
+@media (min-width: 900px) {
+  #project__header
+    .projecttoggle
+    .projecttoggle__wrapper
+    .projecttoggle__item.projecttoggle--overview {
+    margin-left: 0;
+  }
+}
+
 @media (min-width: 1200px) {
   #project .project__layer .project__layer__body .information__description,
   #project .project__layer .project__layer__body .overview__thumbnail__wrapper {
@@ -1806,8 +1834,6 @@ body.hasHover .tooltip {
   -ms-flex-direction: row;
   flex-direction: row;
   width: 100%;
-
-  font-size: ;
 }
 #project
   .project__images
@@ -2086,7 +2112,8 @@ body.hasHover .tooltip {
   .overview__thumbnail
   .item__img__text {
   font-size: 0.625rem;
-  /* text-transform: lowercase; */
+  line-height: 1;
+  text-transform: uppercase;
   padding-left: 1.75px;
 }
 
@@ -2549,7 +2576,7 @@ body.hasHover .tooltip {
     .overview__thumbnail__wrapper
     .overview__thumbnail
     .item__img__text {
-    font-size: 0.75rem;
+    font-size: 0.625rem;
   }
 }
 @media (min-width: 1700px) {
