--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2175,6 +2175,15 @@ letter-spacing: .875px;
   padding-left: 1.75px;
 }
 
+#project
+  .project__overview
+  .project__layer__body
+  .overview__thumbnail__wrapper
+  .overview__thumbnail
+  .item__img__text .text__imagecount {
+  letter-spacing: .875px;
+  }
+
 @media (min-width: 700px) {
   #project__header .projecttitle__wrapper .projecttitle__name {
     -webkit-box-flex: 4;
