--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,15 +215,15 @@ body.hasHover a:hover {
 body.hasHover #header .header__menutoggle .header__menutoggle__item:hover {
   text-decoration: underline;
 }
-body.hasHover #project__header .projecttoggle .projecttoggle__item:hover {
+/* body.hasHover #project__header .projecttoggle .projecttoggle__item:hover {
   text-decoration: underline;
-}
-body.hasHover
+} */
+/* body.hasHover
   #project__header
   .projecttoggle
   .projecttoggle__item.inactive:hover {
   text-decoration: underline;
-}
+} */
 body.hasHover .tooltip {
   position: absolute;
   display: block;
@@ -441,15 +441,17 @@ body.hasHover .tooltip {
   text-align: left;
 }
 
-#header .header__sitetitle .header__sitetitle__item:hover {
-  opacity: 0.6;
-}
-
 #header .header__sitetitle .header__sitetitle__item img {
-  width: fit-content;
+  width: initial;
   height: 2.25rem;
 
-  margin-top: 0.25rem;
+  margin-top: 0.125rem;
+  transition: box-shadow 0.125s;
+}
+
+#header .header__sitetitle .header__sitetitle__item img:hover,
+#header .header__sitetitle .header__sitetitle__item img:active {
+  box-shadow: 2px 2px 8px inset #999;
 }
 
 #header .header__sitetitle .header__sitetitle__item.item--1 {
@@ -593,6 +595,12 @@ body.hasHover .tooltip {
   -ms-flex-order: 1;
   order: 1;
 }
+@media (min-width: 900px) {
+  #header .header__sitetitle .header__sitetitle__item img {
+    height: 3rem;
+  }
+}
+
 @media (min-width: 1200px) {
   #menu .menu__wrapper .menu__item.contact {
     padding-bottom: 2rem;
@@ -1069,7 +1077,7 @@ body.hasHover .tooltip {
 
   text-underline-position: from-font;
   text-decoration-thickness: 1.5px;
-  text-decoration-color: #fb6f22;
+  text-decoration-color: #222b2e;
 }
 
 #mapping .mapping__item .item__wrapper .item__text .item__projectname {
@@ -1386,9 +1394,7 @@ body.hasHover .tooltip {
   -ms-flex-align: start;
   align-items: flex-start;
 
-  font-size: 75%;
-
-  text-transform: uppercase;
+  font-size: 87.5%;
 }
 #project__header .projectclose {
   width: 25px;
@@ -1486,11 +1492,24 @@ body.hasHover .tooltip {
 #project__header .projecttoggle .projecttoggle__wrapper .projecttoggle__item {
   /* padding-left: 0.2rem; */
 
-  font-size: 75%;
+  font-size: 70%;
   color: #333;
-  padding: 0.25rem 0.625rem;
-  background: #eeeeee;
-  border-radius: 2rem;
+  padding: 0.25rem 0.5rem;
+  background: #f0f0f0;
+}
+
+#project__header
+  .projecttoggle
+  .projecttoggle__wrapper
+  .projecttoggle__item:hover {
+  opacity: 0.6;
+}
+
+#project__header
+  .projecttoggle
+  .projecttoggle__wrapper
+  .projecttoggle__item:active {
+  box-shadow: 0 0 0 1px inset;
 }
 
 #project__header
